Fix initial rendering lag issue   - By changing menu & content layout   - Fix keyboard navigation going to menu     even if it was hidden   - Add initial overflow logic

--- a/src/components/app-menu/app-menu.css
+++ b/src/components/app-menu/app-menu.css
@@ -1,24 +1,7 @@
-header {
-  background: var(--primary-color);
-  color: white;
-  height: 5.6rem;
-  display: flex;
-  align-items: center;
-  box-shadow: 0 0.2rem 0.5rem 0 rgba(0, 0, 0, 0.26);
-}
 
-h1 {
-  font-variation-settings: 'wght' 600, 'wdth' 100;
-  font-size: 2.4rem;
-  color: white;
-  padding: 0 1.2rem;
-}
-
-
-:host {
+app-menu {
   width: 28rem;
   min-width: 28rem;
-  border-right: 1px solid var(--menu-border-color);
 }
 
 ion-item {
